hoan thien validate fe